--- a/Udemy/Curso HTML, CSS, JS/CSS3/grid/grid1.css
+++ b/Udemy/Curso HTML, CSS, JS/CSS3/grid/grid1.css
@@ -1,4 +1,9 @@
 .grid {
     display: grid;
-    grid-template-columns: 100px 200px 100px;
+    /*grid-template-columns: 1fr 2fr 1fr;*/
+    /*grid-template-rows: 1fr 2fr;*/
+    grid-template-columns: minmax(200px, 1fr) 1fr;
+    grid-template-rows: minmax(200px, 300px);
+    grid-gap: 20px;
+
 }
