--- a/Udemy/Curso HTML, CSS, JS/CSS3/grid/grid1.css
+++ b/Udemy/Curso HTML, CSS, JS/CSS3/grid/grid1.css
@@ -2,8 +2,7 @@
     display: grid;
     /*grid-template-columns: 1fr 2fr 1fr;*/
     /*grid-template-rows: 1fr 2fr;*/
-    grid-template-columns: minmax(200px, 1fr) 1fr;
-    grid-template-rows: minmax(200px, 300px);
+    grid-template-columns: repeat(6, 1fr);
     grid-gap: 20px;
 
 }
